--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <style>
+        h1{
+            color: brown;
+           
+        }
+    </style>
     <h1>hello world</h1>
     <h3>ektu change korlam heheh</h3>
 </body>
